# imagen

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  HOW_TO_TEST.md  LICENSE  README.md  TEST_RESULTS.md  prefab-manifest.json  pyproject.toml  test_text_to_image_example.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-and-release.yml
data/inputs/: .gitkeep
data/outputs/: .gitkeep
scripts/: check_version_sync.py  quick_start.py  validate_manifest.py  version_bump.py
src/: __init__.py  main.py
tests/: test_main.py
