[project]
name = "imagen"
version = "0.1.2"
description = "使用 Google Gemini API 实现图像生成和编辑功能，支持文本生成图像和基于现有图像的编辑"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "remy", email = "redreamality@gmail.com" }
]
keywords = ["ai", "prefab", "gemini", "image-generation", "image-editing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# 运行时依赖（会被打包到最终产物中）
dependencies = [
    "requests>=2.32.5",
]

[project.optional-dependencies]
# 开发和测试依赖（不会被打包）
dev = [
    "pytest>=7.4.0",
    "flake8>=6.1.0",
    "pytest-cov>=4.1.0",
    "pre-commit>=3.5.0",
    "isort>=5.12.0",
    "tomli>=2.0.1; python_version < '3.11'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# 确保 prefab-manifest.json 被包含在 wheel 包中
[tool.hatch.build.targets.wheel.force-include]
"prefab-manifest.json" = "prefab-manifest.json"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
pythonpath = ["."]


[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
known_first_party = ["src"]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", ".venv", "build", "dist"]

[dependency-groups]
dev = [
    "isort>=7.0.0",
    "pre-commit>=4.3.0",
    "tomli>=2.3.0",
]
